# Sudoku

./: CMakeLists.txt  build.sh
src/: main.cpp  sudoku.cpp  sudoku.h
